# Audible-Altimeter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  blinky.cpp  bmp3_communications.cpp  bmp3_communications.hpp  main.cpp  notes.md  pico_extras_import.cmake  pio_serializer.pio
.github/workflows/: clang-format.yml  general-build.yml  pico-build.yml
Audible-Altimeter-Embedded/audio/public/: rpi_i2s_audio_driver.h
Audible-Altimeter-Embedded/include/Audible-Altimeter-Embedded/: ITiny2350.hpp  Tiny2350.hpp  bmp_390.hpp  rp2350_i2s_driver.hpp  rpi_i2s_audio_driver.hpp  timer.hpp  tiny_2350.hpp
Audible-Altimeter-Embedded/src/: CMakeLists.txt  Tiny2350.cpp  bmp_390.cpp  bmp_390_communications.cpp  bmp_390_communications.hpp  board_descriptions.hpp  dummy.cpp  i2s.pio  rp2350_i2s_driver.cpp  rpi_i2s_audio_driver.cpp  timer.cpp  tiny_2350.cpp
Audible-Altimeter-Executable/src/: CMakeLists.txt  main.cpp
Audible-Altimeter/include/Audible-Altimeter/: Runner.hpp  altimeter_data.hpp  audio_driver.hpp  audio_driver_interface.hpp  audio_player.hpp  barometric_sensor_interface.hpp  device_description_interface.hpp  runner.hpp  sample_id.hpp  timer_interface.hpp
Audible-Altimeter/src/: CMakeLists.txt  Runner.cpp  altimeter_data.cpp  audio_player.cpp  audio_samples.hpp  dummy.cpp  four.cpp  one.cpp  runner.cpp  three.cpp  two.cpp
Audible-Altimeter/src/audio/public/: audio_driver.h  sample_id.h
Audible-Altimeter/src/audio/src/samples/: one.cpp  three.cpp
Audible-Altimeter/test/: CMakeLists.txt  altimeter_data_tests.cpp  runner_tests.cpp
Audible-Altimeter/test/data/: barometric_sensor_test_data.hpp  path_to_data_folder.hpp.in  pressure_test_data.json  runner_test_data.hpp  runner_test_data.json  temperature_test_data.json
Audible-Altimeter/test/mocks/: audio_driver_interface.hpp  barometric_sensor_interface.hpp  device_description_interface.hpp  timer_interface.hpp
assets/: convert_wav.py  eight.wav.ignore  eleven.wav.ignore  fifteen.wav.ignore  five.wav.ignore  fourteen.wav.ignore  nine.wav.ignore  seven.wav.ignore  six.wav.ignore  ten.wav.ignore  thirteen.wav.ignore  twelve.wav.ignore
audio_arrays/: audio_samples.h  audio_test_48k_16bit_mono.cpp  hello_world_48k_16bit_signed_mono.h
design-docs/: PreliminaryDocument.md
docs/: notes.md
scripts/: conversion_script.sh  convert_audio_to_code.py  encode-audio.sh  encode_audio.sh  run-clang-format.sh
